tests/pass/test_small.tk
import std/io::println
import std/memory

shape Point (
    x: i32,
    y: i32,
    z: i32,
)

type PointTup = (i32, i32)

fn processPoint(p: PointTup) {
    println("Point is ({}, {})", p.0, p.1)
    return
}

fn addx(point: Point, v: i32) -> i32 {
    auto tmp = point.x + v
    return tmp
}

fn addtox(point#: Point, v: i32) {
    point#.x += v
}

fn addtox_useref(&point#: Point, v: i32) {
    point#.x += v
}

fn main() -> i32 {
    auto p# = Point(x = 1, y = 2, z = 111)
    auto i# = 0
    auto logi# = 0
    while (i < 3) {
        println("[{}]p.x is {}, loop {}", logi#++, p.x, i)
        p#.x = p.x + 10
        i# = i + 1
    }
    println("[{}]p.x is {}, loop {}", logi#++, p.x, i)
    p#.x = addx(p, 10)
    println("[{}]p.x is {} (after addx, should be 41)", logi#++, p.x)
    
    addtox(p#, 10)
    println("[{}]p.x is {} (after addtox, should be 51 because of In-place Capture)", logi#++, p.x)
    
    addtox_useref(&p#, 10)
    println("[{}]p.x is {} (after addtox_useref, should be 61)", logi#++, p.x)

    auto b# = true
    if (b) {
        println("[{}]bool true works", logi#++)
    }
    b# = false
    if (b) {
        println("[{}]bool false error", logi#++)
    } else {
        println("[{}]bool false works", logi#++)
    }

    auto f# = 3.14
    return 0
}
